# knowledge

./: CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: development-rules.mdc
docs/: development-rules.md  tasks.md
docs/architecture/: components-and-dependencies.md  knowledge-system.md
docs/guides/: development-rules.md
docs/plan/: tasks.md
tools/dev-scripts/: README.md  task10_validation.sh  task11_validation.sh  task12_validation.sh  task13_validation.sh  task14_validation.sh  task15_validation.sh  task16_validation.sh  task17_validation.sh  task18_validation.sh  task19_validation.sh  task1_validation.sh  task20_validation.sh  task21_validation.sh  task22_validation.sh  task23_validation.sh  task2_validation.sh  task3_validation.sh  task4_validation.sh  task5_validation.sh  task6_validation.sh  task7_validation.sh  task8_validation.sh  task9_validation.sh
