[tool.poetry]
name = "knowledge"
version = "0.1.0"
description = "Knowledge Graph Assisted Research IDE Monorepo"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "knowledge/packages/graph-api" },
    { include = "knowledge/packages/graph-builder" },
    { include = "knowledge/packages/graph-core" },
    { include = "knowledge/packages/graph-service" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ruff = "^0.1.6"
black = "^23.11.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
mypy = "^1.7.1"

[tool.ruff]
line-length = 88
target-version = "py310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"